# js-embedding-vis

./: .gitignore  README.md  bundle.py  get_data.py  inline_cfg.py  makefile  pyproject.toml
bundled/: index.html
dev_scripts/: bundle.py  gen_hooks_demo.py  get_data.py
docs/: config.json  index.html  iris_pca.jsonl
docs/_configs/: digits.json  iris-hooks.json  iris-inline-data.json  iris.json
docs/digits/: config.json  digits.jsonl  index.html
docs/iris/: config.json  index.html  iris.jsonl
docs/iris-hooks/: index.html
docs/iris-inline-cfg/: index.html
docs/iris-inline-data/: index.html
docs/stress/: config.json  index.html
js_embedding_vis/: __init__.py  __main__.py  index.html  inline_cfg.py
src/: ColorUtil.js  DataFrame.js  DataModel.js  PointCloud.js  SelectionManager.js  VisState.js  config.js  config.json  index.html  navball.js  notif.css  notif.js  style.css  ui.js
